--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  
+  "homepage":"https://itskeffect.github.io/TravelStyle",
   "name": "my-blog",
   "version": "0.1.0",
   "private": true,
@@ -17,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy":"npm run buid",
+    "deploy":"gh-pages -d build"
     
   },
   "eslintConfig": {
