--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  
-  "homepage":"https://itskeffect.github.io/TravelStyle",
+  "homepage": "https://itskeffect.github.io/TravelStyle",
   "name": "my-blog",
   "version": "0.1.0",
   "private": true,
@@ -11,7 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.1",
+    "react-scripts": "^4.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
@@ -19,8 +18,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
